Implementación de las funcionalidades de LibroSoft

--- a/index.html
+++ b/index.html
@@ -3,52 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LibroSoft - Gestión de Biblioteca</title>
+    <title>LibroSoft - Gestión Bibliotecaria</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>📚 LibroSoft v1.0</h1>
-            <p>Sistema de Gestión de Biblioteca</p>
+            <h1><i class="fas fa-book-reader"></i> LibroSoft v1.0</h1>
+            <p>Sistema Integral de Gestión Bibliotecaria</p>
         </header>
 
-        <section id="form-section">
-            <h2>Registrar Nuevo Libro</h2>
+        <section class="card form-section">
+            <h3><i class="fas fa-plus-circle"></i> Registrar Nuevo Libro</h3>
             <form id="book-form">
-                <div class="form-group">
-                    <label for="title">Título del Libro</label>
-                    <input type="text" id="title" placeholder="Ej: Cien Años de Soledad" required>
+                <div class="input-group">
+                    <input type="text" id="title" placeholder="Título del libro..." required>
+                    <input type="text" id="author" placeholder="Autor..." required>
+                    <button type="submit" class="btn btn-primary">Guardar Libro</button>
                 </div>
-                <div class="form-group">
-                    <label for="author">Autor</label>
-                    <input type="text" id="author" placeholder="Ej: Gabriel García Márquez" required>
-                </div>
-                <button type="submit" class="btn-primary">💾 Guardar Libro</button>
             </form>
         </section>
 
-        <hr>
-
-        <section id="list-section">
+        <section class="card list-section">
             <div class="list-header">
-                <h2>Catálogo de Libros</h2>
-                <input type="text" id="search-bar" placeholder="🔍 Buscar por título o autor...">
+                <h3>Catálogo de Libros</h3>
+                <div class="search-box">
+                    <i class="fas fa-search"></i>
+                    <input type="text" id="search-bar" placeholder="Buscar por título o autor...">
+                </div>
             </div>
-            
-            <table class="book-table">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Título</th>
-                        <th>Autor</th>
-                        <th>Estado</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody id="book-list">
-                    </tbody>
-            </table>
+
+            <div class="table-responsive">
+                <table class="book-table">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Título</th>
+                            <th>Autor</th>
+                            <th>Estado</th>
+                            <th>Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody id="book-list">
+                        </tbody>
+                </table>
+                <p id="empty-msg" class="empty-msg">No hay libros registrados.</p>
+            </div>
         </section>
     </div>
 
